--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ scipy==1.13.1
 # --- Visualization ---
 matplotlib==3.9.2
 seaborn==0.13.2
+plotly==5.22.0   # Mapa interactivo en Sección 6.3
 
 # --- Geo & Country Codes ---
 pycountry==24.6.1
