--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ scipy==1.13.1
 matplotlib==3.9.2
 seaborn==0.13.2
 plotly==5.22.0
+kaleido==0.2.1
 
 # --- Geo & Country Codes ---
 pycountry==24.6.1
